--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "glob": "^6.0.4",
     "sequelize": "^3.5.1",
     "mysql": "^2.8.0",
-    "ejs": "^2.3.1"
+    "ejs": "^2.3.1",
+    "promise-mysql": "^1.3.2"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
